--- a/profiles/004_og_tracker.yml
+++ b/profiles/004_og_tracker.yml
@@ -121,7 +121,7 @@ objects:
       permname: og_categoryID
       tracker: $profileobject:trk_og$
       options:
-      type: text_field
+      type: category
       flags:
         - searchable
         - public
