[FIX] Missing JQ plugin turn on

--- a/profiles/001_preferences.yml
+++ b/profiles/001_preferences.yml
@@ -33,6 +33,8 @@ preferences:
   wikiplugininline_datachannel: y
   wikiplugin_favorite: y
   wikiplugininline_favorite: y
+  wikiplugin_jq: y
+  wikiplugininline_jq: y
   wikiplugin_list: y
   wikiplugininline_list: y
   wikiplugin_mail: y
