--- a/profiles/004_og_tracker.yml
+++ b/profiles/004_og_tracker.yml
@@ -140,6 +140,36 @@ objects:
         - public
         - mandatory
   -
+    type: tracker_field
+    ref: trk_og_eventTitle
+    data:
+      name: Event Title
+      permname: og_eventTitle
+      tracker: $profileobject:trk_og$
+      options:
+        - samerow : 1
+      type: text_field
+      flags:
+        - searchable
+        - public
+        - mandatory
+  -
+    type: tracker_field
+    ref: trk_og_eventSummary
+    data:
+      name: Event Summary
+      permname: og_eventSummary
+      tracker: $profileobject:trk_og$
+      options:
+        - height : 6
+        - max : 300
+        - samerow : 1
+      type: text_area
+      flags:
+        - searchable
+        - public
+        - mandatory
+  -
     type: tracker_option
     ref: trk_og_sort_default_field
     data:
