[FIX] Added whiteboard and forums to the uninstall script .Also updated the tracker script for categories

--- a/profiles/004_og_tracker.yml
+++ b/profiles/004_og_tracker.yml
@@ -134,6 +134,9 @@ objects:
       permname: og_categoryID
       tracker: $profileobject:trk_og$
       options:
+        inputtype: d
+        descendants: 2
+        recategorize: save
       type: category
       flags:
         - searchable
