--- a/profiles/007_groupcoreactivities.yml
+++ b/profiles/007_groupcoreactivities.yml
@@ -113,12 +113,12 @@ objects:
       notes:
   -
     type: activity_stream_rule
-    ref: act_wikiupdate
+    ref: act_whiteboardupdate
     data:
       event_type: tiki.wiki.update
       rule_type: advanced
       rule: |
-        (if (equals (substring args.namespace 0 19) (str syn_organicgrp_)) (event-trigger syn.organicgrp.wikiupdate (map
+        (if (and (equals (substring args.namespace 0 15) (str syn_organicgrp_)) (contains args.object whiteboard)) (event-trigger syn.organicgrp.whiteboardupdate (map
         (user args.user)
         (type args.type)
         (object args.object)
@@ -126,12 +126,35 @@ objects:
         (aggregate (hash args.type args.object))
         (feed (str syn_organicgrp))
         )))
-      notes: Wiki page updated in group namespace
+      notes: Whiteboard updated in group namespace
   -
     type: activity_stream_rule
-    ref: act_wikiupdate_rec
+    ref: act_whiteboardupdate_rec
     data:
-      event_type: syn.organicgrp.wikiupdate
+      event_type: syn.organicgrp.whiteboardupdate
+      rule_type: record
+      rule: (event-record event args)
+      notes:
+  -
+    type: activity_stream_rule
+    ref: act_groupcreate
+    data:
+      event_type: tiki.trackeritem.create
+      rule_type: advanced
+      rule: |
+        (if (and (equals args.values.status (str o)) (equals args.trackerId 1)) (event-trigger syn.organicgrp.groupcreate (map
+        (user args.user)
+        (type args.type)
+        (object args.object)
+        (aggregate (hash args.type args.object))
+        (feed (str main stats))
+        )))
+      notes: Public group is created
+  -
+    type: activity_stream_rule
+    ref: act_groupcreate_rec
+    data:
+      event_type: syn.organicgrp.groupcreate
       rule_type: record
       rule: (event-record event args)
       notes:
